# cargo-public-api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cargo-public-api.code-workspace  clippy.toml  codex.md  deny.toml  full-tree.txt  zizmor.yml
cargo-metadata-types/: Cargo.toml
cargo-metadata-types/src/: lib.rs
cargo-public-api/: Cargo.toml  MINIMUM_NIGHTLY_RUST_VERSION_FOR_TESTS  MINIMUM_RUSTDOC_JSON_VERSION_FOR_TESTS
cargo-public-api/src/: api_source.rs  arg_types.rs  error.rs  ext.rs  git_utils.rs  json.rs  lib.rs  main.rs  markdown.rs  plain.rs  published_crate.rs  toolchain.rs  vendor.rs
cargo-public-api/tests/: bin_tests.rs  cargo-public-api-bin-tests.rs  cargo-public-api-readme-tests.rs
cargo-public-api/tests/create_test_git_repo/: mod.rs
cargo-public-api/tests/expected-output/: comprehensive_api.txt  diff_published.txt  example_api-v0.3.0.txt  example_api-v0.3.0_document-private-items  example_api-v0.3.0_document-private-items.txt  example_api_diff_v0.1.0_to_v0.2.0.txt  example_api_diff_v0.1.0_to_v0.2.0_colored.txt  example_api_diff_v0.2.0_to_v0.3.0.txt  example_api_v0.3.0_colored.txt  features-featall.txt  features-featnone.txt  features-featnonefeature_afeature_bfeature_c.txt  features-featnonefeature_b.txt  features-featnonefeature_c.txt  lint_error_list.txt  list_public_items.txt  list_self_test_lib_items.txt  list_self_test_lib_items_colored.txt  manifest_with_info.txt  omit-auto-derived-impls-with-triple-s.txt  omit-auto-derived-impls.txt  omit-auto-trait-impls.txt  omit-blanket-impls.txt  public_api_list.txt  rustdoc_json_list.txt  short_help.txt  specific-crate.txt  subcommand_invocation_public_api_arg.txt  test_crate_diff_v0.0.4_to_v0.0.5.txt  test_crate_diff_v0.6.0_to_v0.7.1_colored.txt  test_repo_api_latest.txt  test_repo_api_latest_not_simplified.txt  workspace-version.txt
cargo-public-api/tests/snapshots/: cargo_public_api_bin_tests__comprehensive_api.snap  cargo_public_api_bin_tests__diff-latest.snap  cargo_public_api_bin_tests__diff_published.snap  cargo_public_api_bin_tests__diff_published_with_features.snap  cargo_public_api_bin_tests__example_api-v0.3.0.snap  cargo_public_api_bin_tests__example_api-v0.3.0_document-private-items.snap  cargo_public_api_bin_tests__example_api_diff_v0.1.0_to_v0.2.0.snap  cargo_public_api_bin_tests__example_api_diff_v0.1.0_to_v0.2.0_colored.snap  cargo_public_api_bin_tests__example_api_diff_v0.2.0_to_v0.3.0.snap  cargo_public_api_bin_tests__example_api_v0.3.0_colored.snap  cargo_public_api_bin_tests__features-featall.txt.snap  cargo_public_api_bin_tests__features-featnone.txt.snap  cargo_public_api_bin_tests__features-featnonefeature_b.txt.snap  cargo_public_api_bin_tests__features-featnonefeature_c.txt.snap  cargo_public_api_bin_tests__lint_error_list.snap  cargo_public_api_bin_tests__list_public_items.snap  cargo_public_api_bin_tests__long-completions-help.snap  cargo_public_api_bin_tests__long-diff-help.snap  cargo_public_api_bin_tests__long-help.snap  cargo_public_api_bin_tests__omit-auto-derived-impls-with-triple-s.snap  cargo_public_api_bin_tests__omit-auto-derived-impls.snap  cargo_public_api_bin_tests__omit-auto-trait-impls.snap  cargo_public_api_bin_tests__omit-blanket-impls.snap  cargo_public_api_bin_tests__other-lib-name-diff.snap  cargo_public_api_bin_tests__other_lib_name.snap  cargo_public_api_bin_tests__short-completions-help.snap  cargo_public_api_bin_tests__short-diff-help.snap  cargo_public_api_bin_tests__short-help.snap  cargo_public_api_bin_tests__specific-crate.snap  cargo_public_api_bin_tests__subcommand_invocation_public_api_arg.snap  cargo_public_api_bin_tests__test_repo_api_latest_not_simplified.snap  comprehensive_api.txt  diff-latest.txt  diff_published.txt  diff_published_with_features.txt  example_api-v0.3.0.txt  example_api-v0.3.0_document-private-items.txt  example_api_diff_v0.1.0_to_v0.2.0.txt  example_api_diff_v0.1.0_to_v0.2.0_colored.txt  example_api_diff_v0.2.0_to_v0.3.0.txt  (+26 more)
cargo-public-api/tests/virtual-manifest/: Cargo.toml
public-api/: CHANGELOG.md  Cargo.toml  README.md  comprehensive_api.txt  diff_with_added_items.txt  diff_with_removed_items.txt  empty_diff.txt  public-api.txt
public-api/benches/: json_processing.rs
public-api/examples/: diff_public_api.rs  list_public_api.rs  list_public_functions.rs
public-api/src/: crate_wrapper.rs  diff.rs  error.rs  intermediate_public_item.rs  item_iterator.rs  item_processor.rs  lib.rs  main.rs  nameable_item.rs  path_component.rs  public_item.rs  render.rs  tokens.rs
public-api/src/diff/: hashbag_utils.rs
public-api/tests/: bin_tests.rs  lib_tests.rs  public-api-bin-tests.rs  public-api-lib-tests.rs  public-api-readme-tests.rs  public-api.txt  readme_tests.rs
public-api/tests/common/: mod.rs
public-api/tests/expected-output/: auto_traits.txt  comprehensive_api.txt  comprehensive_api_proc_macro.txt  diff_move_item_between_inherent_impls.txt  (+10 more)
rustdoc-json/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
rustdoc-json/examples/: build-rustdoc-json.rs
rustdoc-json/src/: build.rs  builder.rs  ext.rs  lib.rs  manifest_parser.rs
rustdoc-json/tests/: package_targets.rs  public-api.txt  rustdoc-json-lib-tests.rs  workspace.rs
rustup-toolchain/: CHANGELOG.md  Cargo.toml  README.md  public-api.txt
rustup-toolchain/src/: lib.rs
rustup-toolchain/tests/: public-api.txt  rustup-toolchain-lib-tests.rs
scripts/release-helper/: Cargo.toml
test-apis/auto_traits/: Cargo.toml
test-apis/comprehensive_api/: Cargo.toml
test-apis/example_api-v0.1.0/: Cargo.toml  README.md
test-apis/example_api-v0.1.1/: Cargo.toml
test-apis/example_api-v0.2.1/: Cargo.toml
test-apis/example_api-v0.3.0/: Cargo.toml
test-apis/other-lib-name/: Cargo.toml  README.md
testsuite/: Cargo.toml
testsuite/expected-output/: diff_published_with_features.txt  diff_with_added_items.txt  diff_with_removed_items.txt  example_api_v0.3.0_colored.txt  lint_error_list.txt  list_public_items.txt  omit-auto-derived-impls.txt  omit-auto-trait-impls.txt  print_diff.txt
testsuite/tests/: test-zsh-completions.zsh  testsuite.rs
(+257 files in other folders)
