[package]
edition = "2024"
name = "cargo-metadata-types"
version = "0.0.1"
description = "Utilities for working with rustup toolchains, primarily from cargo test:s."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustup-toolchain"
documentation = "https://docs.rs/rustup-toolchain"
readme = "README.md"
keywords = ["toolchain", "rustup"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustup-toolchain"

[dependencies]
serde_derive = "1.0.179"
serde = "1.0.179"
toml = "0.8.22"
