[package]
edition = "2021"
name = "cargo-public-api"
version = "0.42.0"
default-run = "cargo-public-api"
description = "List and diff the public API of Rust library crates between releases and commits. Detect breaking API changes and semver violations via CI or a CLI."
homepage = "https://github.com/cargo-public-api/cargo-public-api"
documentation = "https://docs.rs/cargo-public-api"
readme = "../README.md"
keywords = ["cargo-subcommand", "semver", "rustdoc-json", "diff"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api"

[features]
# Internal feature used by ./scripts/cargo-test-without-rustup.sh.
test-without-rustup-in-path = []

[dependencies]
nu-ansi-term = "0.50.1"
anyhow = "1.0.75"
cargo-manifest = "0.16.1"
cargo-util = "0.2.8"
clap_complete_command = "0.5.1"
diff = "0.1.13"
dirs = "5.0.0"
home = "0.5.9"
rustc-hash = "2.0.0"
semver = "1.0.18"
thiserror = "2.0.3"
cargo_metadata = "0.18.1"
toml = "0.8.19"

[dependencies.clap]
version = "4.5.0"
features = ["derive", "wrap_help"]

[dependencies.curl]
version = "0.4.47"

[dependencies.hex]
version = "0.4.3"
features = ["serde"]

[dependencies.rustdoc-json]
path = "../rustdoc-json"
version = "0.9.3"

[dependencies.public-api]
path = "../public-api"
version = "0.42.0"

[dependencies.serde]
version = "1.0.179"
features = ["rc"]

[dependencies.serde_json]
version = "1.0.104"
default-features = false

[dependencies.smol_str]
version = "0.3.2"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dev-dependencies.rustup-toolchain]
path = "../rustup-toolchain"
version = "0.1.8"

[dev-dependencies.predicates]
version = "3.1.2"
default-features = false

[dev-dependencies.chrono]
version = "0.4.38"
default-features = false
features = ["std"]

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
remove_dir_all = "0.8.4"
tempfile = "3.10.1"
cargo_metadata = "0.18.1"
