[package]
edition = "2024"
name = "cargo-public-api"
version = "0.50.2"
default-run = "cargo-public-api"
description = "List and diff the public API of Rust library crates between releases and commits. Detect breaking API changes and semver violations via CI or a CLI."
homepage = "https://github.com/cargo-public-api/cargo-public-api"
documentation = "https://docs.rs/cargo-public-api"
readme = "../README.md"
keywords = ["cargo-subcommand", "semver", "rustdoc-json", "diff"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api"

[dependencies]
nu-ansi-term = "0.50.3"
anyhow = "1.0.75"
cargo-manifest = "0.20.0"
cargo-util = "0.2.21"
clap_complete_command = "0.5.1"
crates-index = "3.13.0"
diff = "0.1.13"
dirs = "5.0.0"
rustc-hash = "2.1.1"
semver = "1.0.18"
thiserror = "2.0.3"
cargo_metadata = "0.23.1"
toml = "1.0.2"

[dependencies.clap]
version = "4.5.0"
features = ["derive", "wrap_help"]

[dependencies.curl]
version = "0.4.48"

[dependencies.hex]
version = "0.4.3"
features = ["serde"]

[dependencies.rustdoc-json]
path = "../rustdoc-json"
version = "0.9.8"

[dependencies.public-api]
path = "../public-api"
version = "0.50.3"

[dependencies.serde]
version = "1.0.179"
features = ["rc"]

[dependencies.serde_json]
version = "1.0.104"
default-features = false

[dependencies.smol_str]
version = "0.3.2"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = ["env-filter"]

[dev-dependencies.rustup-toolchain]
path = "../rustup-toolchain"
version = "0.1.10"

[dev-dependencies.predicates]
version = "3.1.4"
default-features = false

[dependencies.jiff]
version = "0.2.17"
default-features = false
features = ["alloc"]

[dev-dependencies]
assert_cmd = "2.1.1"
home = "0.5.12"
remove_dir_all = "1.0.0"
tempfile = "3.19.1"
snapshot-testing = "0.1.8"
