[package]
edition = "2021"
name = "public-api"
version = "0.47.0"
description = "List and diff the public API of Rust library crates. Relies on rustdoc JSON output from the nightly toolchain."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"
documentation = "https://docs.rs/public-api"
readme = "README.md"
keywords = ["semver", "rustdoc-json", "diff", "cargo"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"

[dependencies]
hashbag = { version = "0.1.12", default-features = false }
thiserror = "2.0.3"

[dependencies.serde]
version = "1.0.179"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.104"
features = ["unbounded_depth"]

[dependencies.rustdoc-types]
version = "0.39.0"

[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.0.17"
insta = "1.43.1"
pretty_assertions = "1.4.1"
tempfile = "3.19.1"

[dev-dependencies.itertools]
version = "0.14.0"
default-features = false

[dev-dependencies.rustdoc-json]
path = "../rustdoc-json"
version = "0.9.6"

[dev-dependencies.predicates]
version = "3.1.3"
default-features = false
