[package]
edition = "2024"
name = "public-api"
version = "0.50.3"
description = "List and diff the public API of Rust library crates. Relies on rustdoc JSON output from the nightly toolchain."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"
documentation = "https://docs.rs/public-api"
readme = "README.md"
keywords = ["semver", "rustdoc-json", "diff", "cargo"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/public-api"

[features]
default = ["snapshot-testing"]
snapshot-testing = ["dep:snapshot-testing"]

[dependencies]
hashbag = { version = "0.1.13", default-features = false }
thiserror = "2.0.3"

[dependencies.serde]
version = "1.0.179"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.104"
features = ["unbounded_depth"]

[dependencies.snapshot-testing]
version = "0.1.8"
optional = true

[dependencies.rustdoc-types]
version = "0.56.0"

[dev-dependencies]
anyhow = "1.0.75"
assert_cmd = "2.1.1"
pretty_assertions = "1.4.1"
snapshot-testing = "0.1.8"
tempfile = "3.19.1"

[dev-dependencies.itertools]
version = "0.14.0"
default-features = false

[dev-dependencies.rustdoc-json]
path = "../rustdoc-json"
version = "0.9.8"

[dev-dependencies.predicates]
version = "3.1.4"
default-features = false
