[package]
edition = "2021"
name = "rustdoc-json"
version = "0.9.3"
description = "Utilities for working with rustdoc JSON."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustdoc-json"
documentation = "https://docs.rs/rustdoc-json"
readme = "README.md"
keywords = ["rustdoc-json", "api", "doc"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustdoc-json"

[dependencies]
cargo_metadata = "0.18.1"
cargo-manifest = "0.15.2"
serde = { version = "1.0.179", features = ["derive"] }
thiserror = "1.0.44"
toml = "0.8.19"

[dependencies.tracing]
version = "0.1.40"
features = ["attributes"]

[dev-dependencies]
assert_cmd = "2.0.16"
expect-test = "1.5.0"
tempfile = "3.10.1"

[dev-dependencies.predicates]
version = "3.1.2"
default-features = false

[dev-dependencies.public-api]
path = "../public-api"
version = "0.37.0"
