[package]
edition = "2021"
name = "rustdoc-json"
version = "0.9.5"
description = "Utilities for working with rustdoc JSON."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustdoc-json"
documentation = "https://docs.rs/rustdoc-json"
readme = "README.md"
keywords = ["rustdoc-json", "api", "doc"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustdoc-json"

[dependencies]
cargo_metadata = "0.18.1"
cargo-manifest = "0.19.1"
serde = { version = "1.0.179", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.22"

[dependencies.tracing]
version = "0.1.41"
features = ["attributes"]

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.19.1"

[dev-dependencies.predicates]
version = "3.1.3"
default-features = false
