[package]
edition = "2021"
name = "rustup-toolchain"
version = "0.1.8"
description = "Utilities for working with rustup toolchains, primarily from cargo test:s."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustup-toolchain"
documentation = "https://docs.rs/rustup-toolchain"
readme = "README.md"
keywords = ["toolchain", "rustup"]
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/rustup-toolchain"

[dependencies]
thiserror = "2.0.3"

[dev-dependencies]
expect-test = "1.5.1"

[dev-dependencies.rustdoc-json]
path = "../rustdoc-json"
version = "0.9.4"

[dev-dependencies.public-api]
path = "../public-api"
version = "0.42.0"
