[package]
name = "release-helper"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies.clap]
version = "4.5.0"
features = ["derive", "wrap_help"]

[dependencies.jiff]
version = "0.2.16"
default-features = false
features = ["alloc"]

[dependencies]
semver = "1.0.18"

[dev-dependencies]
pretty_assertions = "1.4.1"
