[package]
edition = "2021"
name = "auto_traits"
version = "0.1.0"
description = "Example API used in the cargo-public-api test suite."
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/test-apis/auto_traits"
documentation = "https://docs.rs/auto_traits"
readme = "../auto_traits/README.md"
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/test-apis/auto_traits"
