[package]
description = "Systematically defines public items of all kinds and variants. For testing."
name = "comprehensive_api"
version = "0.1.0"
edition = "2021"

# So we can test "pub extern crate ..." statements. This should be a crate
# without any dependencies, so that it is quick to compile, which speeds up
# running tests, since we re-compile this crate with different toolchains.
[dependencies]
unicode-ident = "1.0.3"
