[package]
edition = "2021"
name = "example_api"
version = "0.1.0"
description = "Example API used in the cargo-public-api test suite"
homepage = "https://github.com/cargo-public-api/cargo-public-api/tree/main/test-apis/example_api-v0.1.0"
documentation = "https://docs.rs/example_api"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cargo-public-api/cargo-public-api/tree/main/test-apis/example_api-v0.1.0"
